kiwi/iptables
# Generated by iptables-save v1.4.21 on Fri Dec  4 04:38:24 2015
*mangle
:PREROUTING ACCEPT [56068:5594088]
:INPUT ACCEPT [55917:5581114]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [54855:5828785]
:POSTROUTING ACCEPT [54865:5829879]
:KUBE-PUBLIC - [0:0]
-A KUBE-PUBLIC -d 100.100.100.1/32 -p tcp -m tcp --dport 8080 -m comment --comment default-lb3 -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Fri Dec  4 04:38:24 2015
# Generated by iptables-save v1.4.21 on Fri Dec  4 04:38:24 2015
*nat
:PREROUTING ACCEPT [1:84]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
:KUBE-NODEPORT-CONTAINER - [0:0]
:KUBE-NODEPORT-HOST - [0:0]
:KUBE-PORTALS-CONTAINER - [0:0]
:KUBE-PORTALS-HOST - [0:0]
:felix-PREROUTING - [0:0]
-A PREROUTING -j felix-PREROUTING
-A PREROUTING -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-CONTAINER
-A PREROUTING -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-CONTAINER
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "handle ClusterIPs; NOTE: this must be before the NodePort rules" -j KUBE-PORTALS-HOST
-A OUTPUT -m addrtype --dst-type LOCAL -m comment --comment "handle service NodePorts; NOTE: this must be the last rule in the chain" -j KUBE-NODEPORT-HOST
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.16.13.0/24 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A KUBE-PORTALS-CONTAINER -d 172.16.0.1/32 -p tcp -m comment --comment "default/kubernetes:" -m tcp --dport 443 -j REDIRECT --to-ports 55895
-A KUBE-PORTALS-CONTAINER -d 100.100.100.1/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j REDIRECT --to-ports 37037
-A KUBE-PORTALS-CONTAINER -d 172.16.51.164/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j REDIRECT --to-ports 38337
-A KUBE-PORTALS-CONTAINER -d 100.100.100.1/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j REDIRECT --to-ports 38337
-A KUBE-PORTALS-HOST -d 172.16.0.1/32 -p tcp -m comment --comment "default/kubernetes:" -m tcp --dport 443 -j DNAT --to-destination 125.90.193.195:55895
-A KUBE-PORTALS-HOST -d 172.16.77.190/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j DNAT --to-destination 125.90.193.195:49735
-A KUBE-PORTALS-HOST -d 172.16.51.164/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j DNAT --to-destination 125.90.193.195:38337
-A KUBE-PORTALS-HOST -d 100.100.100.1/32 -p tcp -m comment --comment "default/lb3:" -m tcp --dport 8080 -j DNAT --to-destination 125.90.193.195:38337
COMMIT
# Completed on Fri Dec  4 04:38:24 2015
# Generated by iptables-save v1.4.21 on Fri Dec  4 04:38:24 2015
*filter
:INPUT ACCEPT [2675:252821]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2617:267892]
:DOCKER - [0:0]
:felix-FORWARD - [0:0]
:felix-FROM-ENDPOINT - [0:0]
:felix-INPUT - [0:0]
:felix-TO-ENDPOINT - [0:0]
:felix-from-315122029a3 - [0:0]
:felix-p-_111426374de96aa-i - [0:0]
:felix-p-_111426374de96aa-o - [0:0]
:felix-to-315122029a3 - [0:0]
-A INPUT -j felix-INPUT
-A FORWARD -j felix-FORWARD
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A felix-FORWARD -i cali+ -m conntrack --ctstate INVALID -j DROP
-A felix-FORWARD -o cali+ -m conntrack --ctstate INVALID -j DROP
-A felix-FORWARD -i cali+ -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A felix-FORWARD -o cali+ -m conntrack --ctstate RELATED,ESTABLISHED -j RETURN
-A felix-FORWARD -i cali+ -j felix-FROM-ENDPOINT
-A felix-FORWARD -o cali+ -j felix-TO-ENDPOINT
-A felix-FORWARD -i cali+ -j ACCEPT
-A felix-FORWARD -o cali+ -j ACCEPT
-A felix-FROM-ENDPOINT -i cali315122029a3 -g felix-from-315122029a3
-A felix-FROM-ENDPOINT -j DROP
-A felix-INPUT ! -i cali+ -j RETURN
-A felix-INPUT -m conntrack --ctstate INVALID -j DROP
-A felix-INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A felix-INPUT -p udp -m udp --sport 68 --dport 67 -j ACCEPT
-A felix-INPUT -p udp -m udp --dport 53 -j ACCEPT
-A felix-INPUT -j felix-FROM-ENDPOINT
-A felix-TO-ENDPOINT -o cali315122029a3 -g felix-to-315122029a3
-A felix-TO-ENDPOINT -j DROP
-A felix-from-315122029a3 -j MARK --set-xmark 0x0/0xffffffff
-A felix-from-315122029a3 -m mac ! --mac-source 8A:75:37:2B:F2:98 -m comment --comment "Incorrect source MAC" -j DROP
-A felix-from-315122029a3 -j felix-p-_111426374de96aa-o
-A felix-from-315122029a3 -m mark --mark 0x1/0x1 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-from-315122029a3 -m comment --comment "Default DROP if no match (endpoint 315122029a3c11e5b45690b11c10406c):" -j DROP
-A felix-p-_111426374de96aa-i -j MARK --set-xmark 0x1/0xffffffff
-A felix-p-_111426374de96aa-i -j RETURN
-A felix-p-_111426374de96aa-i -m comment --comment "No match, fall through to next profile" -j MARK --set-xmark 0x0/0xffffffff
-A felix-p-_111426374de96aa-o -j MARK --set-xmark 0x1/0xffffffff
-A felix-p-_111426374de96aa-o -j RETURN
-A felix-p-_111426374de96aa-o -m comment --comment "No match, fall through to next profile" -j MARK --set-xmark 0x0/0xffffffff
-A felix-to-315122029a3 -j MARK --set-xmark 0x0/0xffffffff
-A felix-to-315122029a3 -j felix-p-_111426374de96aa-i
-A felix-to-315122029a3 -m mark --mark 0x1/0x1 -m comment --comment "Profile accepted packet" -j RETURN
-A felix-to-315122029a3 -m comment --comment "Default DROP if no match (endpoint 315122029a3c11e5b45690b11c10406c):" -j DROP
COMMIT
# Completed on Fri Dec  4 04:38:24 2015
